# fastapi-postgres-async

./: .env  .gitignore  .pre-commit-config.yaml  README.md
backend/: pyproject.toml
backend/env/: .env.local
backend/src/: main.py
backend/src/common/: config.py  database.py  settings.py
backend/src/daos/: user.py
backend/src/model/user/: user_model.py
backend/src/router/user/: user_router.py
backend/src/schema/user/: user_schema.py
backend/src/service/user/: user_service.py
backend/src/util/: auth_util.py
docker/: build-backend.sh  docker-compose.yaml
scripts/: autogenerate.sh  downgrade.sh
