[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["nahoon kang <ejrtks102020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"
alembic = "^1.13.1"
jose = "^1.0.0"
loguru = "^0.7.2"
passlib = "^1.7.4"
jwt = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
